--- a/issues.html
+++ b/issues.html
@@ -146,7 +146,7 @@
         <!--                FOOTER              -->
         
         <footer>
-            <div class="container text-center wow lightSpeedIn">
+            <div class="container text-center wow fadeInRightBig">
                 <p>&copy 2018</p>
             </div>
         </footer>
